# kaladra_kapital

./: .gitignore  Cargo.toml
src/: main.rs  strat.rs  trade_api.rs
strategies/: beast_memory.json
