[package]
name = "kalandra_kapital"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.195", features = ["derive"] }
serde_json = { version = "1.0.111", features = [] }
reqwest = { version = "0.11.23", features = ["json", "cookies"] }
tokio = { version = "1.35.1", features = ["rt-multi-thread"]}